ps5-demo/istio-manifests/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "frontend.default.svc.cluster.local"
  http:
  # - match:
  #   - uri:
  #       prefix: "/"
  #   route:
  #   - destination:
  #       host: productpage.bookinfo.svc.cluster.local
  #       subset: ps5-user
  - route:
    - destination:
        host: frontend
        port:
          number: 80
